<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/backgroundwatercolor">

                <TextView
                    android:id="@+id/criarevento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/criarevento"
                    android:textColor="@color/colorText"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView5" />

                <EditText
                    android:id="@+id/edit_text_nomeevento"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/container"
                    android:fontFamily="@font/lato"
                    android:text="@string/nome_do_evento"
                    android:textColor="@color/branco"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toTopOf="@+id/editText_data"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/criarevento" />

                <EditText
                    android:id="@+id/editText_data"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/container"
                    android:fontFamily="@font/lato"
                    android:text="@string/data_evento"
                    android:textColor="@color/branco"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toTopOf="@+id/editText_local"
                    app:layout_constraintStart_toStartOf="@+id/edit_text_nomeevento"
                    app:layout_constraintTop_toBottomOf="@+id/edit_text_nomeevento" />

                <EditText
                    android:id="@+id/editText_horário"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/container"
                    android:fontFamily="@font/lato"
                    android:text="@string/horario_evento"
                    android:textColor="@color/branco"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toTopOf="@+id/editText_local"
                    app:layout_constraintEnd_toEndOf="@+id/edit_text_nomeevento"
                    app:layout_constraintTop_toBottomOf="@+id/edit_text_nomeevento" />

                <EditText
                    android:id="@+id/editText_local"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/container"
                    android:fontFamily="@font/lato"
                    android:text="@string/local_evento"
                    android:textColor="@color/branco"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText_data" />

                <EditText
                    android:id="@+id/editText_categoria"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/container"
                    android:fontFamily="@font/lato"
                    android:text="@string/categoria_evento"
                    android:textColor="@color/branco"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText_local" />

                <Button
                    android:id="@+id/inserir_imagem_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/brancotransparente"

                    android:fontFamily="@font/lato_bold"
                    android:text="@string/inserir_imagem"
                    android:textColor="@color/btn"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText_categoria" />

                <TextView
                    android:id="@+id/segurança_evento"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="@font/lato"
                    android:text="@string/segurança_evento"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/inserir_imagem_btn" />

                <CheckBox
                    android:id="@+id/checkBox_trans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/lato"
                    android:text="@string/check_trans"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/segurança_evento" />

                <CheckBox
                    android:id="@+id/checkBox_bi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/lato"
                    android:text="@string/check_bi"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/editText_categoria"
                    app:layout_constraintTop_toBottomOf="@+id/segurança_evento" />

                <CheckBox
                    android:id="@+id/checkBox_les"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/lato"
                    android:text="@string/check_les"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox_trans" />

                <CheckBox
                    android:id="@+id/checkBox_naobi"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/lato"
                    android:text="@string/check_naobi"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/editText_categoria"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox_bi" />

                <Button
                    android:id="@+id/administradoras_btn"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/container"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/add_adm"
                    android:textColor="@color/branco"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox_les" />

                <Button
                    android:id="@+id/cadastrar_evento_bnt"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/btn"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/cadastrar_evento"
                    android:textColor="@color/branco"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/administradoras_btn"
                    app:layout_constraintStart_toStartOf="@+id/administradoras_btn"
                    app:layout_constraintTop_toBottomOf="@+id/administradoras_btn" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/logo" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>