<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/backgroundwatercolor"
    tools:context="br.com.elasnojogo.Views.FavoritosFragment">

    <TextView
        android:id="@+id/favoritos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/lato_bold"
        android:textColor="@color/colorText"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView_favoritos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_favoritos"
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:background="@color/container"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favoritos" />

    <TextView
        android:id="@+id/text_view_nomeevento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/lato"
        android:text="@string/nome_evento"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imageView_favoritos"
        app:layout_constraintTop_toBottomOf="@+id/favoritos" />

    <TextView
        android:id="@+id/text_view_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/lato"
        android:text="@string/local"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imageView_favoritos"
        app:layout_constraintTop_toBottomOf="@+id/text_view_nomeevento" />

    <TextView
        android:id="@+id/text_view_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/lato"

        android:text="@string/data"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imageView_favoritos"
        app:layout_constraintTop_toBottomOf="@+id/text_view_local" />

</androidx.constraintlayout.widget.ConstraintLayout>